# CPUFreqUtility

./: CMakeLists.txt  CPUFreqUtility.desktop  CPUFreqUtility.spec  Changelog  README.md  cpufreq-icons.qrc  kf5-cpufrequtility.desktop  kf5-cpufrequtility.spec  main.cpp
src/: CMakeLists.txt  cpu_item.cpp  cpu_item.h  cpufreq_icons.qrc  kf5-cpufrequtility.notifyrc  main.cpp  main.py  mainwindow.cpp  mainwindow.h  toolbar.cpp  toolbar.h
src/helper/: CMakeLists.txt  cpu_freq_helper.cpp  cpu_freq_helper.h
src/icons/: index.theme
src/tray/: traywidget.cpp  traywidget.h
